--- a/foll/templates/foll/head_css.html
+++ b/foll/templates/foll/head_css.html
@@ -29,7 +29,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 
-	<link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Overlock" type="text/css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Raleway" type="text/css" rel="stylesheet">
 
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 
