--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -31,7 +31,7 @@ input::-webkit-inner-spin-button {
 }
 
 * {
-    font-family: 'Overlock';
+    font-family: 'Raleway';
  }
 div{
 	display: block;
