--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -8,8 +8,8 @@
 
 <div class = "signup_wrapper">
 	<div class = "row">
-	<h1> Foll hihi </h1>
-	<h3>  Choose the best food to bring to a potluck while keeping the cost within budget </h3>
+	<h1> FOLL </h1>
+	<h2>  Choose the best food within budget </h2>
 	</div>
 	<div class = "row">
 		<div class = "col-xl-push-2 col-lg-push-2 col-md-push-2 col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
