--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -12,18 +12,17 @@
 	<h2>  Choose the best food within budget </h2>
 	</div>
 	<div class = "row">
-		<div class = "col-xl-push-2 col-lg-push-2 col-md-push-2 col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+		<!-- <div class = "col-xl-push-2 col-lg-push-2 col-md-push-2 col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
 			{% if account_taken_flag == True %}
 				<p style = "color: red;  text-align: center; ">Username/email address has been taken. Try again. </p>
 			{% endif %}
 			<div class = "signup_form_container">
 			{% crispy signup_form signup_form.helper %}
 			</div>
-		</div>
-		<div class = "hidden-sm-down">
-			<div class = "col-xl-push-2 col-lg-push-2 col-md-push-2 col-xl-6 col-lg-6 col-md-6 col-xs-0 canvas">
-		</div>
-		</div>
+		</div> -->
+
+			<div class = "col-xl-push-2 col-lg-push-2 col-md-push-2 col-sm-push-2 col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-12 canvas"></div>
+
 	</div>
 
 		
