--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -21,7 +21,7 @@
 			</div>
 		</div> -->
 
-			<div class = "col-xl-push-2 col-lg-push-2 col-md-push-2 col-sm-push-2 col-xl-8 col-lg-8 col-md-8 col-sm-8 col-xs-12 canvas"></div>
+			<div class = "col-md-12 canvas"></div>
 
 	</div>
 
