--- a/static/css/signup_page.css
+++ b/static/css/signup_page.css
@@ -55,8 +55,8 @@
 }
 .overall_pic{
   margin-top: 10%;
-  margin-left:10%;
-  margin-right:10%;
+  margin-left:auto;
+  margin-right:auto;
   width: 500px;
   height: 400px;
   position: relative;
