--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -21,7 +21,9 @@
 			</div>
 		</div> -->
 
-			<div class = "col-md-12 canvas"></div>
+			<div class = "col-md-12">
+				<div class = "canvas"> </div>
+			</div>
 
 	</div>
 
