--- a/static/css/signup_page.css
+++ b/static/css/signup_page.css
@@ -57,9 +57,10 @@
   margin-top: 10%;
   margin-left:auto;
   margin-right:auto;
+  left: 3%;
   width: 500px;
   height: 400px;
-  position: relative;
+  position: absolute;
 }
 .hand{
   width:450px;
