--- a/static/css/signup_page.css
+++ b/static/css/signup_page.css
@@ -54,12 +54,14 @@
 
 }
 .overall_pic{
+
+}
+.canvas{
   margin-top: 10%;
   margin-left:auto;
   margin-right:auto;
-  left: 3%;
-  width: 500px;
-  height: 400px;
+  min-width: 500px;
+  min-height: 400px;
   position: absolute;
 }
 .hand{
