--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -21,8 +21,7 @@
 			</div>
 		</div> -->
 
-			<div class = "col-md-12" style=" min-height: 450px">
-				<div class = "canvas"> </div>
+			<div class = "col-md-12 canvas" >
 			</div>
 
 	</div>
