--- a/static/css/signup_page.css
+++ b/static/css/signup_page.css
@@ -54,16 +54,15 @@
 
 }
 .overall_pic{
-
-}
-.canvas{
   margin-top: 10%;
   margin-left:auto;
   margin-right:auto;
-  min-width: 500px;
-  min-height: 400px;
-  position: absolute;
+  left: 3%;
+  width: 500px;
+  height: 400px;
+  position: relative;
 }
+
 .hand{
   width:450px;
   height:275px;
