--- a/static/css/signup_page.css
+++ b/static/css/signup_page.css
@@ -54,7 +54,7 @@
 
 }
 .overall_pic{
-  margin-top: 10%;
+  margin-top: 5%;
   margin-left:auto;
   margin-right:auto;
   left: 3%;
@@ -63,7 +63,7 @@
   position: relative;
 }
 
-.hand{
+.hand::after{
   width:450px;
   height:275px;
   content: url("nicetray.png");
