--- a/static/css/signup_page.css
+++ b/static/css/signup_page.css
@@ -66,7 +66,7 @@
 .hand{
   width:450px;
   height:275px;
-  content: url("nicetray.png");
+  background: url("nicetray.png") no-repeat;
   bottom: 0;
   position: relative;
 }
