--- a/static/css/signup_page.css
+++ b/static/css/signup_page.css
@@ -66,7 +66,7 @@
 .hand{
   width:450px;
   height:275px;
-  background: url("nicetray.png") no-repeat;
+  background-image: url("nicetray.png") no-repeat;
   background-size: 450px 275px;
   bottom: 0;
   position: relative;
