--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -27,15 +27,17 @@
 	</div>
 
 		
-	<div class = "row" style = "padding-bottom: 5%;">
-		<div class = "col-md-push-2 col-md-4">
+	<div class = "row share_banner" style = "padding-bottom: 5%;">
+		<div class = "col-md-7 ">
 			<h2> Share</h2>
 		<!-- 	<p> The moment when you went to a party with your favorite sushi burritos thinking everyone's gonna luv it and realized that you'd never been so wrong in your life....
 			</p> -->
 
 			<p>Feel free to share your ideas with friends using Foll ! Give Foll a list of items that you have in mind for a party and let others members in the party rate them. Don't worry if the item you wish to bring receives a low rating, because all submissions are anonymous! </p>
 		</div>
-		<div class = "col-md-push-2 col-md-4">
+	</div>
+	<div class = "rowoptimize_banner" style = "padding-bottom: 5%;">
+		<div class = " col-md-7 pull-right " >
 			<h2> Optimize</h2>
 			<p> Foll collects the ratings of all the items proposed and renders a list of food that will maximize the value based on ratings under the price constraint specified. </p>
 			<p> If the item you proposed is on the top-rated list, foll will automatically remind you to bring it to the party so you won't forget!</p>
