--- a/static/css/signup_page.css
+++ b/static/css/signup_page.css
@@ -9,7 +9,7 @@
 }
 
 .share_banner{
-  background: url("shareing_food.png") ;
+  background: url("sharing_food.png") ;
 }
 .share_banner h2, p{
   text-align: left;
