--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -33,7 +33,7 @@
 		<!-- 	<p> The moment when you went to a party with your favorite sushi burritos thinking everyone's gonna luv it and realized that you'd never been so wrong in your life....
 			</p> -->
 
-			<p>Feel free to share your ideas with friends using Foll ! Give Foll a list of items that you have in mind for a party and let others members in the party rate them. Don't worry if the item you wish to bring receives a low rating, because all submissions are anonymous! </p>
+			<h3>Feel free to share your ideas with friends using Foll ! Give Foll a list of items that you have in mind for a party and let others members in the party rate them. Don't worry if the item you wish to bring receives a low rating, because all submissions are anonymous! </h3>
 		</div>
 	</div>
 	<div class = "rowoptimize_banner" style = "padding-bottom: 5%;">
