--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -27,8 +27,8 @@
 	</div>
 
 		
-	<div class = "row share_banner" style = "padding-bottom: 5%;">
-		<div class = "col-md-7 ">
+	<div class = "row share_banner">
+		<div class = "col-md-push-1 col-md-7" style= "margin-top:3%; margin-left:3%">
 			<h3> Share</h3>
 		<!-- 	<p> The moment when you went to a party with your favorite sushi burritos thinking everyone's gonna luv it and realized that you'd never been so wrong in your life....
 			</p> -->
