--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -28,7 +28,8 @@
 
 		
 	<div class = "row share_banner">
-		<div class = "col-md-push-1 col-md-7" style= "margin-top:3%; margin-left:3%">
+		<div class = "col-md-push-1 col-md-7" style= "margin-top:3%; margin-left:3%; background-color:rgba(243,138,27,0.3);">
+
 			<h3> Share</h3>
 		<!-- 	<p> The moment when you went to a party with your favorite sushi burritos thinking everyone's gonna luv it and realized that you'd never been so wrong in your life....
 			</p> -->
