--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -37,11 +37,10 @@
 			<h4>Feel free to share your ideas with friends using Foll ! Give Foll a list of items that you have in mind for a party and let others members in the party rate them. Don't worry if the item you wish to bring receives a low rating, because all submissions are anonymous! </h4>
 		</div>
 	</div>
-	<div class = "rowoptimize_banner" style = "padding-bottom: 5%;">
-		<div class = " col-md-7 pull-right " >
+	<div class = "row optimize_banner">
+		<div class = " col-md-7 pull-right" style= "margin-top:3%; margin-right:3%; padding:1%; background-color:rgba(95,0,0,0.4);"" >
 			<h3> Optimize</h3>
-			<h4> Foll collects the ratings of all the items proposed and renders a list of food that will maximize the value based on ratings under the price constraint specified. </h4>
-			<p> If the item you proposed is on the top-rated list, foll will automatically remind you to bring it to the party so you won't forget!</p>
+			<h4> Foll collects the ratings of all the items proposed and renders a list of food that will maximize the value based on ratings under the price constraint specified. If the item you proposed is on the top-rated list, foll will automatically remind you to bring it to the party so you won't forget!</h4>
 		</div>
 		
 	</div>
