--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -23,7 +23,7 @@ input::-webkit-inner-spin-button {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    background : url("blue-polkadot-background.jpg");
+    background : url("wood_wallpaper.jpg");
 }
 
 #wrapper.toggled {
