--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -45,17 +45,18 @@
 		
 	</div>
 	<div class = "row">
-		<div class = "col-xl-push-3 col-lg-push-3 col-md-push-3 col-xl-3 col-lg-6 col-md-6 col-sm-12 col-xs-12" style = 'margin : 0;'>
-			{% if no_user_flag == True %}
+		<div class = "col-md-12" style = "margin : auto;">
+<!-- 			{% if no_user_flag == True %}
 				<p style = "color: red;  text-align: center; ">Username/password does not exist. Try again. </p>
 			{% endif %}
 			<div class = "login_form_container">
 			<h5 style = "float:left; display:inline-block; margin-right: 3px; background-color: #d3d3d3; "> Already a user? Login here: </h5>
-		
 			{% crispy user_login_form user_login_form.helper %}
-			</div>
-			OR
+			</div> -->
+
+			<!-- Django Facebook Login Button -->
 			<div>
+				Try it out by
 				<link href="{{ STATIC_URL }}django_facebook/css/facebook.css" type="text/css" rel="stylesheet" media="all" />
 				{% include 'django_facebook/_facebook_js.html' %}
 
@@ -66,9 +67,7 @@
 				    {% csrf_token %}
 				    <input onclick="F.connect(this.parentNode); return false;" type="image" src="{{ STATIC_URL }}django_facebook/images/facebook_login.png" />
 				</form>
-
 			</div>
-
 
 		</div>
 	</div>
