--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -45,7 +45,7 @@
 		
 	</div>
 	<div class = "row">
-		<div class = "col-md-12" style = "margin : auto;">
+		<div class = "col-md-12" ">
 <!-- 			{% if no_user_flag == True %}
 				<p style = "color: red;  text-align: center; ">Username/password does not exist. Try again. </p>
 			{% endif %}
@@ -55,7 +55,7 @@
 			</div> -->
 
 			<!-- Django Facebook Login Button -->
-			<div>
+			<div style= "margin:auto;>
 				Try it out by
 				<link href="{{ STATIC_URL }}django_facebook/css/facebook.css" type="text/css" rel="stylesheet" media="all" />
 				{% include 'django_facebook/_facebook_js.html' %}
