--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -55,7 +55,7 @@
 			</div> -->
 
 			<!-- Django Facebook Login Button -->
-			<div style= "margin:auto;>
+			<div style= "margin:auto";>
 				Try it out by
 				<link href="{{ STATIC_URL }}django_facebook/css/facebook.css" type="text/css" rel="stylesheet" media="all" />
 				{% include 'django_facebook/_facebook_js.html' %}
