--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -53,7 +53,7 @@
 			<h5 style = "float:left; display:inline-block; margin-right: 3px; background-color: #d3d3d3; "> Already a user? Login here: </h5>
 			{% crispy user_login_form user_login_form.helper %}
 			</div> -->
-			<div class = "col-md-6" style = "text-align: right; line-height:5%;">
+			<div class = "col-md-6" style = "text-align: right; line-height:3;">
 				<p> Try out this app by: <p>
 			</div>
 			<!-- Django Facebook Login Button -->
