--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -27,7 +27,7 @@
             <div class="container-fluid">
 
             	<div class= "row welcome_message">
-      				<h1> <strong> Welcome {{request.user.username}}! </strong></h1>
+      				<h1> <strong> Welcome {{my_first_name}}! </strong></h1>
             	</div>
 
                 <div class="row">
