--- a/foll/templates/foll/sidebar.html
+++ b/foll/templates/foll/sidebar.html
@@ -21,13 +21,13 @@
 
          <li><a href="#">
 	       	 Parties Joined
-	         <span class="badge" style = "margin-top: -8px; margin-left: 15px; padding-left: 0px !important">{{food_newsfeed_num|add:members_newsfeed_num}}</span>
+	         <span class="badge" style = "margin-top: -8px; margin-left: 15px; padding-left: 0px !important">{{party_num}}</span>
 	        </a>
         </li>
 
          <li><a href="#">
 	       	 Food to bring
-	         <span class="badge" style = "margin-top: -8px; margin-left: 15px; padding-left: 0px !important">{{food_newsfeed_num|add:members_newsfeed_num}}</span>
+	         <span class="badge" style = "margin-top: -8px; margin-left: 15px; padding-left: 0px !important">{{food_to_bring_num}}</span>
 	        </a>
         </li>
         
