--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -59,7 +59,8 @@ div{
 	/*padding-top: 35px;*/
 	padding-left: 20px;
 	padding-bottom: 6px;
-	color : green;
+	color : #C5E3BF;
+	text-shadow: 2px 2px #ff0000;
 }
 
 .newsfeed_panel {
