--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -60,7 +60,7 @@ div{
 	padding-left: 20px;
 	padding-bottom: 6px;
 	color : #C5E3BF;
-	text-shadow: 2px 2px #ff0000;
+	text-shadow: 2px 2px #ffffff;
 }
 
 .newsfeed_panel {
