--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -59,8 +59,8 @@ div{
 	/*padding-top: 35px;*/
 	padding-left: 20px;
 	padding-bottom: 6px;
-	color : #C5E3BF;
-	text-shadow: 2px 1px #000000;
+	color : #698B69;
+	text-shadow: 2px 1px #DDDDDD;
 }
 
 .newsfeed_panel {
