--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -59,8 +59,8 @@ div{
 	/*padding-top: 35px;*/
 	padding-left: 20px;
 	padding-bottom: 6px;
-	color : #698B69;
-	text-shadow: 2px 1px #DDDDDD;
+	color : #4DBD33;
+	text-shadow: 2px 1px #BBBBBB;
 }
 
 .newsfeed_panel {
