--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -59,8 +59,8 @@ div{
 	/*padding-top: 35px;*/
 	padding-left: 20px;
 	padding-bottom: 6px;
-	color : #4DBD33;
-	text-shadow: 2px 1px #BBBBBB;
+	color : #98FB98;
+	text-shadow: 2px 1px 2px #FFFFFF;
 }
 
 .newsfeed_panel {
