--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -89,9 +89,7 @@
             			<div class="panel panel-default invitation_panel">
                     	 	<div class="panel-heading">
                     	 	<div class= "row">
-                    	 		<div class = "col-xs-10">
-							    <h3 class="panel-title">Your Invitations </h3>
-							    </div>
+                    	 		<div class = "col-xs-10"><h3 class="panel-title">Your Invitations </h3> </div>
 							   <div class="col-xs-2"><span class="badge pull-right">{{invitation_num}}</span> </div>
 
 							</div>
@@ -109,8 +107,10 @@
     				<div class = "col-md-6">
     						<div class = "panel panel-default">
 	                    		<div class="panel-heading">
-									<h3 class="panel-title"> Food to bring </h3>
-									<span class="badge pull-right">{{food_to_bring_num}}</span> 
+		                    		<div class = "row">
+										<div class = "col-xs-10"><h3 class="panel-title"> Food to bring </h3></div>
+										<div class = "col-xs-2"><span class="badge pull-right">{{food_to_bring_num}}</span></div>
+									</div>
 								</div>
 							
 
