--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -162,18 +162,10 @@
 								<div class="panel-body">
 									<div class="text-center", style = "padding-top: 2px;">
 									  <ul class="pagination">
-									    <li>
-									      <a href="#" aria-label="Previous">
-									        <span aria-hidden="true">&laquo;</span>
-									      </a>
-									    </li>
+									    
 									    <li><a id = "food_newsfeed_button"> Food </a></li>
 									    <li><a id = "members_newsfeed_button"> Members</a></li>
-									    <li>
-									      <a href="#" aria-label="Next">
-									        <span aria-hidden="true">&raquo;</span>
-									      </a>
-									    </li>
+									   
 									  </ul>
 									</div>
 									<div id = "food_newsfeed">
@@ -185,9 +177,9 @@
 											<p> {{food_news.brought_by_user_data}} brought {{food_news.name}} to the party <a href="{% url 'party_details' food_news.belong_to_party.id %}">{{food_news.belong_to_party}}</a> </p>
 										{% endfor %}
 										{% endif %}
-										<hr>
+
 									</div>
-									<div id = "members_newsfeed">
+									<div id = "members_newsfeed hidden">
 										{% if friends_in_party_newsfeed_num == 0 %}
 											<p> No new members. </p>
 										{% else %}
@@ -196,7 +188,7 @@
 											<p> {{friends_in_party_news.user_data}} joined the party <a href="{% url 'party_details' friends_in_party_news.party.id %}">{{friends_in_party_news.party}}</a> on  {{friends_in_party_news.date_accepted}} </p>
 										{% endfor %}
 										{% endif %}
-										<hr>
+
 									</div>
 								</div>
 							</div>
@@ -233,10 +225,27 @@
 	
 $(document).ready(function() {
 
+	var members_newsfeed = $("#members_newsfeed");
+	var food_newsfeed = $("#food_newsfeed");
+
 	$("#menu-toggle").click( function (e){
 		    e.preventDefault();
 		    $("#wrapper").toggleClass("toggled");
 	});
+
+
+	$("#food_newsfeed_button").click( function(e){
+		members_newsfeed.addClass("hidden");
+		food_newsfeed.removeClass("hidden");
+
+	});
+
+	$("#members_newsfeed_button").click( function(e){
+		members_newsfeed.removeClass("hidden");
+		food_newsfeed.addClass("hidden");
+
+	});
+
 });
 </script>
 
