--- a/foll/templates/foll/intro.html
+++ b/foll/templates/foll/intro.html
@@ -176,7 +176,7 @@
 									    </li>
 									  </ul>
 									</div>
-									<div id = "food_newsfeed">
+									<div id = "food_newsfeed" style = "margin: 3%;">
 										{% if food_newsfeed_num == 0 %}
 											<p> No new food. </p>
 										{% else %}
@@ -187,7 +187,7 @@
 										{% endif %}
 
 									</div>
-									<div id = "members_newsfeed" class = "hidden">
+									<div id = "members_newsfeed" class = "hidden" style = "margin: 3%;">
 										{% if friends_in_party_newsfeed_num == 0 %}
 											<p> No new members. </p>
 										{% else %}
