--- a/foll/templates/foll/signup.html
+++ b/foll/templates/foll/signup.html
@@ -34,13 +34,13 @@
 		<!-- 	<p> The moment when you went to a party with your favorite sushi burritos thinking everyone's gonna luv it and realized that you'd never been so wrong in your life....
 			</p> -->
 
-			<h4>Feel free to share your ideas with friends using Foll ! Give Foll a list of items that you have in mind for a party and let others members in the party rate them. Don't worry if the item you wish to bring receives a low rating, because all submissions are anonymous! </h4>
+			<h4>Feel free to share your ideas with friends using Foll ! Give Foll a list of items that you wish to bring to a potluck and let others members in the party rate them. Don't worry if the item you wish to bring receives a low rating, because all submissions are anonymous! </h4>
 		</div>
 	</div>
 	<div class = "row optimize_banner">
 		<div class = " col-md-7 pull-right" style= "margin-top:6%; margin-right:3%; padding:1%; background-color:rgba(95,0,0,0.2);"" >
 			<h3> Optimize</h3>
-			<h4> Foll collects the ratings of all the items proposed and renders a list of food that will maximize the value based on ratings under the price constraint specified. If the item you proposed is on the top-rated list, foll will automatically remind you to bring it to the party so you won't forget!</h4>
+			<h4> Foll collects the ratings of all the items proposed and renders a list of food that will maximize the value based on ratings under the price constraint specified!</h4>
 		</div>
 		
 	</div>
