--- a/foll/templates/foll/base.html
+++ b/foll/templates/foll/base.html
@@ -58,7 +58,7 @@ $("#menu-toggle").click( function (e){
 						<!-- active class gives the hover hightlight -->
 						<!-- Menu Not gonna work without the anchor tag -->
 						<li class = "active"><a href = "{% url 'index' %}"> Home </a> </li>
-						<li> <a href = "#"> About </a> </li>
+						<li> <a href = "{% url 'about' %}"> About </a> </li>
 						<li> <a href = "#"> Help </a> </li>
 					</ul>
 					{% if request.user.is_authenticated %}
