--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,18 @@
-#testing {
-	color:green;
+.about_wrapper {
+  /*webkit makes transition smooth*/
+    margin-top:5%;
+    padding-left: 0;
+    padding-top:2%;
+    background: url('about_wallpaper.jpg');
 }
 
+.about_info_container {
+    margin: 0 auto 0 auto;
+    height: 1000px;
+    width: 600px;
+    background-color: rgba(229,234,241,0.6);
+
+}
 
 
 input::-webkit-outer-spin-button,
