--- a/foll/templates/foll/about.html
+++ b/foll/templates/foll/about.html
@@ -3,7 +3,7 @@
 {% block hihi %}
 
 <div class = "about_wrapper">
-	<div calss = "about_info_container">
+	<div class = "about_info_container">
 		
 	</div>
 </div>
