--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,6 +3,7 @@
     background: url('about_wallpaper.jpg');
     width: 100%;
     height: 100%;
+    position:absolute;
 }
 
 .about_info_container {
