--- a/foll/templates/foll/about.html
+++ b/foll/templates/foll/about.html
@@ -4,14 +4,17 @@
 
 <div class = "about_wrapper">
 	<div class = "about_info_container">
-		<h1> About Foll </h1>
+		<div style = "margin: 10%">
+			<h1> About Foll </h1>
 
-		So your friend/family has invited you to a party. Great. What food should I bring this time?  Should I bring the spaghetti? They probably had enough of it... How about some wine? Too Expensive. Jeez, if only there's app that make the decision for me....
+			<p>So your friend/family has invited you to a party. Great. What food should I bring this time?  Should I bring the spaghetti? They probably had enough of it... How about some wine? Too Expensive. Jeez, if only there's app that make the decision for me....</p>
 
-		 Look no further! With Foll, Choosing what food to bring can never be so easy. Foll is the app that helps you decide what food to bring to a potluck. Given a cost constraint specified by the user, the app will determine a list of suggested items from attendees that will maximize the value. The total amount spend of the food, of course, will be evenly split among all those attended the party. 
+			<p> Look no further! With Foll, choosing what food to bring can never be so easy. Foll is the app that helps you decide what food to bring to a potluck. Given a cost constraint specified by the user, the app will determine a list of suggested items from attendees that will maximize the value. The total amount spend of the food, of course, will be evenly split among all those attended the party. </p>
 
-		 The app is created by Winston Wong (NΨ 1T8) from the University of Toronto. 
+			<p> To find out more about how to use this app, check out the the Help Section.</p>
 
+			<p> The app is created by Winston Wong (NΨ 1T8) from the University of Toronto. </p>
+		</div>
 
 	</div>
 </div>
