--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -14,6 +14,17 @@
     background-color: rgba(251,251,251,0.8);
 
 }
+.about_info_contaomer h1{
+    font-size: 4.5em;
+    font-weight: 500px;
+
+}
+
+.about_info_contaomer p{
+    font-size: 2em;
+    font-weight: 200px;
+
+}
 
 
 input::-webkit-outer-spin-button,
