--- a/foll/templates/foll/about.html
+++ b/foll/templates/foll/about.html
@@ -5,7 +5,7 @@
 <div class = "about_wrapper">
 	<div class = "about_info_container">
 		<div style = "margin: 10%">
-			<h1> About Foll </h1>
+			<h1> About FOLL </h1>
 
 			<p>So your friend/family has invited you to a party. Great. What food should I bring this time?  Should I bring the spaghetti? They probably had enough of it... How about some wine? Too Expensive. Jeez, if only there's app that make the decision for me....</p>
 
