--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -14,13 +14,13 @@
     background-color: rgba(251,251,251,0.8);
 
 }
-.about_info_contaomer h1{
+.about_info_container h1{
     font-size: 4.5em;
     font-weight: 500px;
 
 }
 
-.about_info_contaomer p{
+.about_info_container p{
     font-size: 2em;
     font-weight: 200px;
 
