--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,14 +15,14 @@
 
 }
 .about_info_container h1{
-    font-size: 4.5em;
-    font-weight: 500px;
+    font-size: 2.5em;
+    font-weight: 700;
 
 }
 
 .about_info_container p{
-    font-size: 2em;
-    font-weight: 200px;
+    font-size: 1em;
+    font-weight: 100;
 
 }
 
