--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -12,7 +12,7 @@
     height: 80%;
     width: 80%;
     background-color: rgba(251,251,251,0.8);
-
+    padding:8%;
 }
 .about_info_container h1{
     font-size: 2.5em;
