--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -17,12 +17,14 @@
 .about_info_container h1{
     font-size: 2.5em;
     font-weight: 900;
+    margin:8%;
 
 }
 
 .about_info_container p{
-    font-size: 1em;
+    font-size: 1.5em;
     font-weight: 100;
+    margin: 5%;
 
 }
 
