--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,10 @@
 .about_wrapper {
   /*webkit makes transition smooth*/
     background: url('about_wallpaper.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     width: 100%;
     height: 100%;
     position:absolute;
@@ -9,7 +13,7 @@
 .about_info_container {
     margin: auto;
     margin-top: 8%;
-    height: 80%;
+
     width: 80%;
     background-color: rgba(251,251,251,0.8);
     padding:8%;
@@ -24,6 +28,7 @@
 .about_info_container p{
     font-size: 1.25em;
     font-weight: 75;
+
     
 
 }
