--- a/foll/templates/foll/about.html
+++ b/foll/templates/foll/about.html
@@ -7,7 +7,9 @@
 
 			<h1> About FOLL </h1>
 			<br>
-			<p>So your friend has invited you to a party. Great. What food should I bring this time?  Should I bring the spaghetti? They probably had enough of it... How about some wine? Too Expensive. Jeez, if only there's app that make the decision for me....</p>
+			<p>So your friend invited you to a party. 
+
+			"Great. Should I bring the spaghetti again? They probably had enough of it... How about some wine? Too Expensive. Jeez, if only there's an app to make the decision for you..."</p>
 
 			<p> Look no further! With Foll, choosing what food to bring can never be so easy. Foll is the app that helps you decide what food to bring to a potluck. Given a cost constraint specified by the user, the app will determine a list of suggested items from attendees that will maximize the value. The total amount spend of the food, of course, will be evenly split among all those attended the party. </p>
 
