--- a/foll/templates/foll/sidebar.html
+++ b/foll/templates/foll/sidebar.html
@@ -2,9 +2,9 @@
 
   <ul class="sidebar-nav">
 		<li class = "sidebar-brand"><a href="#">Dashboard</a></li>
-        <li><a href="#">Account</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Logout</a></li>
+        <!-- <li><a href="#">Account</a></li>
+        <li><a href="#">Settings</a></li> -->
+        <li><a href="{% url 'signout' %}">Logout</a></li>
         <hr>
 
         <li><a href="#">
